<resources>
    <string name="app_name">MaFilmApp</string>
    <string name="poster">Poster</string>
    <string name="tab_home_1">Movies</string>
    <string name="tab_home_2">Tv Shows</string>
    <string name="title_setting_language">Pengaturan Bahasa</string>
    <string name="title_detail">Detail Film</string>
    <string name="subtitle_home">Dicoding submission 2</string>
    <string name="overview">Sinopsis</string>
    <string name="user_score">Skor\nPengguna</string>
    <string name="setting">Pengaturan</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="english">English</string>
    <string name="choose_language">Pilih bahasa yang digunakan untuk aplikasi</string>
    <string name="msg_success_set_language">Berhasil mengganti bahasa</string>
    <string-array name="movies_title">
        <item name="1">A Star Is Born</item>
        <item name="2">Aquaman</item>
        <item name="3">Avengers: Infinity War</item>
        <item name="4">Bird Box</item>
        <item name="5">Bohemian Rhapsody</item>
        <item name="6">Bumblebee</item>
        <item name="7">Creed II</item>
        <item name="8">Deadpool</item>
        <item name="9">How To Train Your Dragon: The Hidden World</item>
        <item name="10">Dragon Ball Super: Broly</item>
    </string-array>
    <string-array name="movies_overview">
        <item name="1">Musisi kawakan Jackson Maine menemukan - dan jatuh cinta dengan - artis yang sedang berjuang Ally. Dia baru saja menyerah pada mimpinya untuk menjadi besar sebagai penyanyi - sampai Jack membujuknya menjadi sorotan. Tetapi bahkan ketika karir Ally lepas landas, sisi pribadi dari hubungan mereka hancur, seperti Jack berjuang pertempuran yang sedang berlangsung dengan setan internalnya sendiri.</item>
        <item name="2">Dulunya merupakan rumah bagi peradaban paling maju di Bumi, Atlantis sekarang merupakan kerajaan bawah laut yang diperintah oleh Raja Orm yang haus kekuasaan. Dengan pasukan yang sangat besar, Orm berencana untuk menaklukkan orang-orang samudera yang tersisa dan kemudian ke permukaan dunia. Yang menghalangi jalannya adalah Arthur Curry, saudara setengah manusia, setengah saudara lelaki Atlantis dan pewaris sejati takhta.</item>
        <item name="3">Ketika Avengers dan sekutu mereka terus melindungi dunia dari ancaman yang terlalu besar untuk ditangani oleh satu pahlawan, bahaya baru telah muncul dari bayang-bayang kosmik: Thanos. Seorang lalim penghinaan intergalaksi, tujuannya adalah untuk mengumpulkan semua enam Batu Infinity, artefak kekuatan tak terbayangkan, dan menggunakannya untuk menimbulkan keinginannya yang terpelintir pada semua kenyataan. Segala yang Avengers telah perjuangkan telah mengarah ke saat ini - nasib Bumi dan keberadaannya sendiri tidak pernah lebih pasti.</item>
        <item name="4">Lima tahun setelah kehadiran tak terlihat yang tak menyenangkan membuat sebagian besar masyarakat bunuh diri, seorang yang selamat dan dua anaknya melakukan upaya putus asa untuk mencapai keselamatan.</item>
        <item name="5">Penyanyi Freddie Mercury, gitaris Brian May, drummer Roger Taylor dan gitaris bass John Deacon membuat dunia musik terguncang ketika mereka membentuk band rock Queen Rock pada tahun 1970. Lagu-lagu hit menjadi klasik instan. Ketika gaya hidup Mercury yang semakin liar mulai lepas kendali, Queen segera menghadapi tantangan terbesarnya - menemukan cara untuk menjaga band tetap bersama di tengah kesuksesan dan kelebihan.</item>
        <item name="6">Dalam pelarian pada tahun 1987, Bumblebee menemukan tempat perlindungan di tempat barang rongsokan di kota pantai kecil California. Charlie, di puncak usia 18 dan berusaha menemukan tempatnya di dunia, menemukan Bumblebee, bekas luka pertempuran dan patah. Ketika Charlie menghidupkannya, dia dengan cepat mengetahui bahwa ini bukan bug VW kuning biasa.</item>
        <item name="7">Antara kewajiban pribadi dan pelatihan untuk pertarungan besar berikutnya melawan lawan yang memiliki ikatan dengan masa lalu keluarganya, Adonis Creed menghadapi tantangan hidupnya.</item>
        <item name="8">Deadpool menceritakan kisah asal-usul mantan anggota Pasukan Khusus yang berubah menjadi tentara bayaran Wade Wilson, yang setelah menjadi sasaran percobaan jahat yang membuatnya memiliki kekuatan penyembuhan yang dipercepat, mengadopsi Deadpool alter ego. Dipersenjatai dengan kemampuan barunya dan selera humornya yang gelap dan berputar-putar, Deadpool memburu pria yang hampir menghancurkan hidupnya.</item>
        <item name="9">Ketika Hiccup memenuhi mimpinya untuk menciptakan utopia naga yang damai, penemuan Toothless \'dari pasangan yang tak teruji dan sukar ditangkap membuat Night Fury menjauh. Ketika bahaya meningkat di rumah dan pemerintahan Hiccup sebagai kepala desa diuji, baik naga dan pengendara harus membuat keputusan yang mustahil untuk menyelamatkan jenis mereka.</item>
        <item name="10">Bumi damai setelah Turnamen Kekuasaan. Menyadari bahwa alam semesta masih memiliki banyak orang yang lebih kuat untuk dilihat, Goku menghabiskan seluruh hari pelatihannya untuk mencapai ketinggian yang lebih besar. Lalu suatu hari, Goku dan Vegeta dihadapkan oleh seorang Saiyan yang disebut \'Broly\' yang belum pernah mereka lihat sebelumnya. Orang-orang Saiyan seharusnya hampir sepenuhnya musnah dalam kehancuran Planet Vegeta, jadi apa yang dilakukan orang ini di Bumi? Pertemuan antara tiga Saiyan yang telah mengikuti takdir yang sangat berbeda ini berubah menjadi pertempuran yang luar biasa, dengan bahkan Frieza (kembali dari Neraka) terperangkap dalam campuran.</item>
    </string-array>
    <string-array name="movies_release">
        <item name="1">5 Oktober 2018</item>
        <item name="2">21 Desember 2018</item>
        <item name="3">23 April 2018</item>
        <item name="4">12 Desember 2018</item>
        <item name="5">30 Oktober 2018</item>
        <item name="6">21 Desember 2018</item>
        <item name="7">14 November 2018</item>
        <item name="8">12 Februari 2016</item>
        <item name="9">22 Februari 2019</item>
        <item name="10">13 Desember 2018</item>
    </string-array>
    <string-array name="movies_duration">
        <item name="1">2 Jam 15 Menit</item>
        <item name="2">2 Jam 24 Menit</item>
        <item name="3">2 Jam 29 Menit</item>
        <item name="4">2 jam 4 Menit</item>
        <item name="5">2 Jam 15 Menit</item>
        <item name="6">1 Jam 54 Menit</item>
        <item name="7">2 Jam 10 Menit</item>
        <item name="8">1 Jam 48 Menit</item>
        <item name="9">1 Jam 44 Menit</item>
        <item name="10">1 Jam 41 Menit</item>
    </string-array>
    <string-array name="movies_budget">
        <item name="1">$36,000,000.00</item>
        <item name="2">$160,000,000.00</item>
        <item name="3">$300,000,000.00</item>
        <item name="4">$19,800,000.00</item>
        <item name="5">$52,000,000.00</item>
        <item name="6">$135,000,000.00</item>
        <item name="7">$50,000,000.00</item>
        <item name="8">$58,000,000.00</item>
        <item name="9">$129,000,000.00</item>
        <item name="10">$1,000,000.00</item>
    </string-array>
    <string-array name="movies_revenue">
        <item name="1">$433,888,866.00</item>
        <item name="2">$1,143,689,193.00</item>
        <item name="3">$2,046,239,637.00</item>
        <item name="4">-</item>
        <item name="5">$835,137,710.00</item>
        <item name="6">$465,895,025.00</item>
        <item name="7">$137,944,327.00</item>
        <item name="8">$783,100,000.00</item>
        <item name="9">$517,526,875.00</item>
        <item name="10">$114,102,821.00</item>
    </string-array>
    <string-array name="movies_genre">
        <item name="1">Drama, Romatis, Musik</item>
        <item name="2">Aksi, Petualangan, Fantasi</item>
        <item name="3">Petualangan, Aksi, Fantasi</item>
        <item name="4">Thriller, Drama</item>
        <item name="5">Drama, Musik</item>
        <item name="6">Aksi, Petualangan, Sci-Fi</item>
        <item name="7">Drama</item>
        <item name="8">Aksi, Petualangan, Komedi</item>
        <item name="9">Animasi, Keluarga, Petualangan</item>
        <item name="10">Aksi, Animasi, Fantasi</item>
    </string-array>
    <string-array name="tv_shows_title">
        <item name="1">One-Punch Man</item>
        <item name="2">The Flash</item>
        <item name="3">Arrow</item>
        <item name="4">Fairy Tail</item>
        <item name="5">Dragon Ball</item>
        <item name="6">Demon Slayer: Kimetsu no Yaiba</item>
        <item name="7">See No Evil: The Moors Murders</item>
        <item name="8">Game of Thrones</item>
        <item name="9">Marvel\'s Agents of S.H.I.E.L.D.</item>
        <item name="10">Fear the Walking Dead</item>
    </string-array>
</resources>