<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.arinal.made.ui.settinglang.SettingLanguageActivity"
        android:padding="20dp">

    <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
            android:layout_marginTop="20dp">
        <RadioButton
                android:id="@+id/cbBahasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bahasa_indonesia"/>
        <RadioButton
                android:id="@+id/cbEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
