<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Space
                android:id="@+id/spacer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                android:layout_marginBottom="8dp"/>

        <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:indeterminate="true"
                app:layout_constraintTop_toTopOf="@id/spacer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/txTitle"/>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/cardView"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp">

            <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/poster"/>
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/txTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:justificationMode="inter_word"
                tools:targetApi="o"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cardView"
                app:layout_constrainedWidth="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"/>

        <TextView
                android:id="@+id/txGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_genre"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                tools:targetApi="m"
                android:gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@id/txTitle"
                app:layout_constraintTop_toBottomOf="@id/txTitle"
                android:layout_marginStart="10dp"/>

        <TextView
                android:id="@+id/txRelease"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="5dp"
                android:layout_marginTop="5dp"
                android:drawableTint="@color/colorPrimaryDark"
                tools:targetApi="m"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/txGenre"
                app:layout_constraintEnd_toEndOf="@id/txTitle"
                app:layout_constraintStart_toEndOf="@id/cardView"
                android:layout_marginStart="10dp"/>

        <TextView
                android:id="@+id/txDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_duration"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                tools:targetApi="m"
                android:gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintEnd_toEndOf="@id/txTitle"
                app:layout_constraintTop_toBottomOf="@id/txRelease"
                android:layout_marginStart="10dp"/>

        <TextView
                android:id="@+id/txBudget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_outcome"
                android:drawablePadding="6dp"
                android:layout_marginTop="5dp"
                android:drawableTint="@color/colorPrimaryDark"
                tools:targetApi="m"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/txDuration"
                app:layout_constraintEnd_toEndOf="@id/txTitle"
                app:layout_constraintStart_toEndOf="@id/cardView"
                android:layout_marginStart="10dp"/>

        <TextView
                android:id="@+id/txRevenue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_income"
                android:drawablePadding="6dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:layout_marginTop="5dp"
                tools:targetApi="m"
                android:gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintEnd_toEndOf="@id/txTitle"
                app:layout_constraintTop_toBottomOf="@id/txBudget"
                android:layout_marginStart="10dp"/>

        <com.dinuscxj.progressbar.CircleProgressBar
                android:id="@+id/circleBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:style="solid_line"
                app:progress_stroke_width="1dp"
                app:progress_start_color="@color/colorPrimaryDark"
                app:progress_end_color="@color/colorAccent"
                app:progress_start_degree="-90"
                app:drawBackgroundOutsideProgress="true"
                app:progress_stroke_cap="round"
                app:progress_text_color="#000"
                app:line_width="4dp"
                app:line_count="30"
                app:layout_constraintStart_toEndOf="@id/cardView"
                app:layout_constraintBottom_toBottomOf="@id/cardView"
                android:layout_marginStart="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_score"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/circleBar"
                app:layout_constraintTop_toTopOf="@id/circleBar"/>

        <TextView
                android:id="@+id/txTitleOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:layout_marginTop="15dp"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/cardView"
                app:layout_constraintTop_toBottomOf="@id/cardView"/>

        <TextView
                android:id="@+id/txOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                tools:targetApi="o"
                app:layout_constraintStart_toStartOf="@id/cardView"
                app:layout_constraintEnd_toEndOf="@id/txTitle"
                app:layout_constraintTop_toBottomOf="@id/txTitleOverview"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>